vanilla_load_balancer/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:

            - name: local_service
              domains: ["*"]
              routes:

              - match:
                  prefix: "/"
                route:
                  cluster: cluster_example


          http_filters:
          - name: envoy.router

  clusters:
    - name: "cluster_example"
      connect_timeout: "1s"
      type: "strict_dns"
      # lb_policy: "LEAST_REQUEST"
      lb_policy: "ROUND_ROBIN"
      # lb_policy: "RING_HASH"
      # lb_policy: "MAGLEV"
      hosts:

        - socket_address:
            address: "node_1"
            port_value: 8000

        - socket_address:
            address: "node_2"
            port_value: 8000
